@@ -75,6 +75,8 @@ New features:
 - Female characters are now supported on inRO.
 - Kore now supports "monster-NPCs", NPCs which look like monsters.
 - Nearly complete Freya support, for servers like VanRO and EuphRO.
+- New "Vx" interface, ported from modKore.
+  See http://openkore.sourceforge.net/forum/viewtopic.php?p=50860#50860
 
 New commands:
 - storage log
